<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_intro_cadastro"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_intro_cadastro_rodape"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/botaoCriarUserId"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/texto_intro_cadastro_botao"
            android:onClick="botaoCadastrar"/>

        <TextView
            android:id="@+id/botaoEntrarId"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Já tenho conta"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:onClick="botaoEntrar"/>

    </LinearLayout>

</LinearLayout>